# umf-solver

./: .gitignore  README.md  constants.py  data.csv  db.py  importer.py  ingredient_api.py  main.prolog  ontology.py  ontology_catalog.json  or-cp-sat.py  or-tools.py  pulp-impl.py  pyproject.toml  recipe.py  reporting.py  solver.py  state.py  todo.md  umf.py  utils.py
.umf_state/: aliases.json  inventory.json
recipes/: hamada_rust-mahavir.csv  hamada_rust.csv  redart_test.source.json
tests/: test_importer.py  test_ingredient_api.py  test_real_world_examples.py
