[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "umf-solver"
version = "0.1.0"
description = "CLI tools for glaze UMF calculation and substitution solving."
requires-python = ">=3.10"
dependencies = [
    "elastictabstops>=1.0.1",
    "ortools>=9.11,<10",
    "pandas>=2.2,<3",
]

[project.scripts]
umf = "umf:main"

[tool.setuptools]
py-modules = [
    "constants",
    "db",
    "ingredient_api",
    "importer",
    "ontology",
    "solver",
    "state",
    "umf",
    "utils",
]
